--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,5 +3,7 @@
   <div class="hero-text">
     <h1 class="title-right">CENTAR SENSUS</h1>
     <p>Centar za razvoj potencijala djece i odraslih</p>
+    <div class="moto">"Mjesto na kojem tvoj potencijal pronalazi put ostvarenja"</div>
+
   </div>
 </section>
