--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,29 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
 
-/* You can add global styles to this file, and also import other style files */
+/* Tjelesne postavke */
+html, body {
+  width: 100vw;
+  height: 100%;
+  overflow-x: hidden;
+  background-color: #fcfbfb;
+}
+
+body {
+  padding-top: 8vh; /* ili koliko ti je visok header */
+}
+
+/* Angular layout elementi */
+app-root, app-layout, app-home,
+.container, .layout, main {
+  display: block;
+  padding: 0 !important;
+  margin: 0 !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  overflow-x: hidden;
+}
