--- a/src/app/pages/kontakt/kontakt.component.html
+++ b/src/app/pages/kontakt/kontakt.component.html
@@ -1,1 +1,22 @@
-<p>kontakt works!</p>
+<section class="contact-section">
+  <h1>Kontaktirajte nas</h1>
+
+  <div class="contact-info">
+    <p><strong>Email: </strong> <a href="mailto:info&#64;centarsensus.hr">info&#64;centarsensus.hr</a></p>
+    <p><strong>Telefon: </strong> <a href="tel:095222222">+385 95 222 222</a></p>
+    <p>Sesvete, Zagreb</p>
+    <p class="note">Možete nas kontaktirati putem emaila ili telefonski. Svi upiti su dobrodošli.</p>
+  </div>
+
+  <div class="contact-icons">
+    <a href="mailto:info@centarsensus.hr" title="Pošalji email">
+      <i class="fa-solid fa-envelope"></i>
+    </a>
+    <a href="https://www.facebook.com/share/1BqLdN1csb/" target="_blank" aria-label="Facebook">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.instagram.com/centarsensus/?igsh=MTV6emU1ZjRlb2d0cw%3D%3D#" target="_blank" aria-label="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+</section>
