--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,2 +1,11 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="layout-wrapper">
+  <app-header></app-header>
+
+  <div class="page-wrapper">
+    <main class="page-content" [@routeAnimations]="getRouteAnimationState(outlet)">
+      <router-outlet #outlet="outlet"></router-outlet>
+    </main>
+  </div>
+
+  <app-footer></app-footer>
+</div>
