--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
+
 <section class="hero">
+  <img src="/hero (7).jpg" alt="Hero" class="hero-img" loading="eager" />
   <div class="overlay"></div>
   <div class="hero-text">
-    <h1 class="title-right">CENTAR SENSUS</h1>
-    <p>Centar za razvoj potencijala djece i odraslih</p>
-    <div class="moto">"Mjesto na kojem tvoj potencijal pronalazi put ostvarenja"</div>
-
+    <h1 class="title-right">CENTAR SESNUS</h1>
+    <div class="moto">Mjesto na kojem tvoj potencijal pronalazi put ostvarenja</div>
   </div>
 </section>
