--- a/src/app/pages/kontakt/kontakt.component.html
+++ b/src/app/pages/kontakt/kontakt.component.html
@@ -1,5 +1,5 @@
 <section class="contact-section">
-  <h1>Kontaktirajte nas</h1>
+  <h1>📞 Kontaktirajte nas</h1>
 
   <div class="contact-info">
     <p><strong>Email: </strong> <a href="mailto:info&#64;centarsensus.hr">info&#64;centarsensus.hr</a></p>
