added the gallery, programs on home page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,8 +18,8 @@
 
 
     <div class="hamburger" (click)="toggleMenu()">
-      <span *ngIf="!menuOpen">&#9776;</span> <!-- hamburger -->
-      <span *ngIf="menuOpen">&#10005;</span> <!-- X -->
+      <span *ngIf="!menuOpen">&#9776;</span> 
+      <span *ngIf="menuOpen">&#10005;</span>
     </div>
   </nav>
 </header>
