--- a/src/app/pages/onama/onama.component.html
+++ b/src/app/pages/onama/onama.component.html
@@ -1,5 +1,5 @@
 <section class="about-section">
-  <div class="section-block">
+  <div class="section-block justify-text">
     <h2>🧭 O nama</h2>
     <p>
         <strong>Centar Sensus</strong>  je udruga sa sjedištem u <strong>Sesvetama, Zagreb</strong>, posvećena poboljšanju kvalitete života djece, mladih i odraslih u našoj zajednici. Vjerujemo u snagu zajedništva, osobni razvoj i stvaranje prostora u kojem svatko može rasti i ostvariti svoj puni potencijal.
@@ -53,7 +53,7 @@
     </ul>
   </div>
 
-<div class="section-block donate">
+<div class="section-block donate justify-text">
   <h2>💖 Podržite nas</h2>
   <p>
     Centar Sensus je <strong>neprofitna organizacija</strong> koja djeluje kako bi zajednici i pojedincima pružila što više <em>lako dostupnih i korisnih usluga</em>.  
@@ -63,10 +63,9 @@
     🎁 Donirati možete jednostavno – <strong>skenirajte QR kod</strong> putem svog mobilnog bankarstva i upišite željeni iznos.
   </p>
   <div class="qr-code">
-    <!-- Ovdje umetni QR kod sliku -->
     <img src="qr-donacija.png" alt="QR kod za donaciju" />
   </div>
-  <p><strong>Hvala vam na svakom obliku podrške. 🙏</strong></p>
+  <p class = "center-text"><strong>Hvala vam na svakom obliku podrške. 🙏</strong></p>
 </div>
 
 </section>
