--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,11 +1,9 @@
-/* RESET */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* NAVBAR */
 .navbar {
     box-shadow: 0 2px 8px rgba(179, 154, 220, 0.5);
     position: fixed;
@@ -23,14 +21,21 @@
     max-height: 12vh;
 }
 
-/* LOGO */
 .logo img {
     height: clamp(40px, 8vw, 75px);
     width: clamp(40px, 8vw, 75px);
-    padding: 1vh 1vh;
+    padding: 0.3vh 0.3vh;
 }
 
-/* DEFAULT NAVIGATION (desktop) */
+.logo img {
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.logo img:hover {
+    transform: scale(1.2) translateY(-2px);
+}
+
 .nav-links {
     list-style: none;
     display: flex;
@@ -49,7 +54,6 @@
     color: #ddd;
 }
 
-/* HAMBURGER */
 .hamburger {
     display: none;
     font-size: 2rem;
@@ -61,26 +65,19 @@
 
 
 
-/* ============= MOBILE FULLSCREEN MENU (ispod headera) ============= */
+
 @media (max-width: 700px) {
     .nav-links {
         position: fixed;
-      
-         top: calc(8vh + 40px); /* Pomakni 2px ispod headera */
-    height: calc(100vh - 8vh);
-       
-        /* visina headera – prilagodi po potrebi */
         left: 0;
         width: 100%;
-       
-        /* ostatak ekrana */
         background-color: #fcfbfb;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        /* sadržaj od vrha */
         align-items: flex-start;
-        padding: 2rem 2rem;
+        top:calc(8vh + 8px); 
+        padding: 8vh 2rem 2rem;
         gap: 1.5rem;
         transform: translateX(100%);
         transition: transform 0.4s ease;
