--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -1,20 +1,24 @@
 
-.content-wrapper {
-  margin-top: 8vh; /* Točno koliko je visok header */
-  min-height: calc(100vh - 12vh);
-  position: fixed;
+
+.page-content {
+  position: relative;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
-main {
-  display: block;
-  width: 100%;
-  min-height: 100%;
+.route-wrapper {
+  position: relative;
+  min-height: inherit;
 }
 
-
-.page-wrapper {
+.layout-wrapper {
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - 8vh); /* ili koliko ti je visok header */
+  min-height: 100vh;
+}
+
+.page-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
