--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -3,9 +3,10 @@
 
   <div class="page-wrapper">
     <main class="page-content" [@routeAnimations]="getRouteAnimationState(outlet)">
-      <router-outlet #outlet="outlet"></router-outlet>
+      <div class="route-wrapper">
+        <router-outlet #outlet="outlet"></router-outlet>
+      </div>
     </main>
   </div>
-
   <app-footer></app-footer>
 </div>
