--- a/src/app/pages/kontakt/kontakt.component.css
+++ b/src/app/pages/kontakt/kontakt.component.css
@@ -1,13 +1,9 @@
 .contact-section {
-  padding: 20vh 5vw 4vh;
+  padding: 6vh 5vw 4vh;
   background-color: #fcfbfb;
   color: #2d2d2d;
-  border-radius: 1rem;
-  
-  margin-bottom: 2rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-}
 
+}
 
 .contact-section h1 {
   font-size: clamp(1.6rem, 4vw, 2.5rem);
@@ -55,3 +51,23 @@
 .contact-icons i:hover {
   color: #9164d9;
 }
+
+.contact-image-wrapper {
+  display: block;
+  width: 100vw;
+  height: 60vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.contact-image-wrapper img {
+    line-height: 0;
+  font-size: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
