--- a/src/app/pages/kontakt/kontakt.component.html
+++ b/src/app/pages/kontakt/kontakt.component.html
@@ -20,3 +20,6 @@
     </a>
   </div>
 </section>
+<div class="contact-image-wrapper">
+  <img src="/hero (7).jpg" alt="Kontakt ilustracija" />
+</div>
