--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* RESET */
+
 * {
   margin: 0;
   padding: 0;
@@ -6,11 +6,9 @@
   font-family: 'Inter', sans-serif;
 }
 
-/* OSNOVNA STRUKTURA */
 html, body {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
   background-color: #fcfbfb;
   display: flex;
   flex-direction: column;
@@ -20,14 +18,12 @@ body {
   min-height: 100vh;
 }
 
-/* ANGULAR ROOT STRUKTURA */
 app-root {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
 
-/* LAYOUT WRAPPER */
 .layout-wrapper {
   display: flex;
   flex-direction: column;
@@ -35,13 +31,11 @@ app-root {
   min-height: 100vh;
 }
 
-/* GLAVNI SADRŽAJ */
 main.page-content {
   flex: 1;
-  padding-top: 8vh; /* ili koliko ti je visok header */
+  padding-top: 8vh;
 }
 
-/* POMOĆNE KLASE AKO KORISTIŠ */
 .container,
 .layout,
 main,
@@ -50,5 +44,12 @@ app-home {
   display: block;
   width: 100vw;
   max-width: 100vw;
-  overflow-x: hidden;
+ 
 }
+
+
+.lb-image {
+  max-width: 90vw !important;
+  max-height: 90vh !important;
+}
+
