--- a/src/app/pages/onama/onama.component.css
+++ b/src/app/pages/onama/onama.component.css
@@ -54,6 +54,11 @@
 }
 
 @media (max-width: 700px) {
+
+  .about-section {
+    padding: 1rem 5vw;
+  }
+
   .section-block {
     padding: 1rem;
   }
@@ -82,7 +87,7 @@
 }
 
 .donate p {
-  
+
   font-size: clamp(1rem, 2.5vw, 1.2rem);
   line-height: 1.6;
   margin-bottom: 1rem;
@@ -108,4 +113,3 @@
   border-radius: 0.5rem;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
-
