added assets folder

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar">
     <div class="logo">
       <a routerLink="/" (click)="menuOpen = false">
-        <img src="/logo.png" alt="Logo" />
+        <img src="assets/logo.png" alt="Logo" />
       </a>
     </div>
 
