--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <img src="/hero (7).jpg" alt="Hero" class="hero-img" loading="eager" />
+  <img src="assets/hero (7).jpg" alt="Hero" class="hero-img" loading="eager" />
   <div class="overlay"></div>
   <div class="hero-text">
     <h1 class="title-right">CENTAR SENSUS</h1>
@@ -21,7 +21,7 @@
       </p>
     </div>
     <div class="about-image">
-      <img src="/hero.jpg" alt="O nama - ilustracija" />
+      <img src="assets/hero.jpg" alt="O nama - ilustracija" />
     </div>
   </div>
 </section>
@@ -33,21 +33,21 @@
 
   <div class="programs-grid">
     <div class="program-card">
-      <img src="/adults.jpg" alt="Programi za odrasle" />
+      <img src="assets/adults.jpg" alt="Programi za odrasle" />
       <h3 class="program-subtitle">Programi za odrasle</h3>
       <p>Osnažite se s našim programima osobnog razvoja: ostvarite osobne i profesionalne ciljeve uz prilagođenu podršku.</p>
       <button class="program-btn" [routerLink]="['/program', 'programi-za-odrasle']">Više informacija</button>
     </div>
 
     <div class="program-card">
-      <img src="/hero (2).jpg" alt="Djeca i mladi" />
+      <img src="assets/hero (2).jpg" alt="Djeca i mladi" />
       <h3 class="program-subtitle">Djeca i mladi</h3>
       <p>Razvoj djece i mladih kroz radionice, mentorstvo i aktivnosti izgradnje vještina za djecu i mlade.</p>
       <button class="program-btn" [routerLink]="['/program', 'djeca-i-mladi']">Više informacija</button>
     </div>
 
     <div class="program-card">
-      <img src="/parents.jpg" alt="Osnaženo roditeljstvo" />
+      <img src="assets/parents.jpg" alt="Osnaženo roditeljstvo" />
       <h3 class="program-subtitle">Osnaženo roditeljstvo</h3>
       <p>Podrška roditeljstvu: pružanje izvora i smjernica roditeljima u suočavanju s izazovima odgoja djece.</p>
       <button class="program-btn" [routerLink]="['/program', 'osnazeno-roditeljstvo']">Više informacija</button>
