--- a/src/app/pages/onama/onama.component.html
+++ b/src/app/pages/onama/onama.component.html
@@ -63,7 +63,7 @@
     🎁 Donirati možete jednostavno – <strong>skenirajte QR kod</strong> putem svog mobilnog bankarstva i upišite željeni iznos.
   </p>
   <div class="qr-code">
-    <img src="qr-donacija.png" alt="QR kod za donaciju" />
+    <img src="assets/qr-donacija.png" alt="QR kod za donaciju" />
   </div>
   <p class = "center-text"><strong>Hvala vam na svakom obliku podrške. 🙏</strong></p>
 </div>
