--- a/src/app/pages/kontakt/kontakt.component.html
+++ b/src/app/pages/kontakt/kontakt.component.html
@@ -21,5 +21,5 @@
   </div>
 </section>
 <div class="contact-image-wrapper">
-  <img src="/hero (7).jpg" alt="Kontakt ilustracija" />
+  <img src="assets/hero (7).jpg" alt="Kontakt ilustracija" />
 </div>
