--- a/src/app/pages/onama/onama.component.css
+++ b/src/app/pages/onama/onama.component.css
@@ -9,14 +9,21 @@
   text-align: justify;
 }
 
-
 .section-block {
   background-color: #fcfbfb;
   border-radius: 1rem;
   padding: 1.5rem;
   margin-bottom: 2rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  
 }
+
+.section-block:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+}
+
 
 .section-block h2 {
   font-size: clamp(1.6rem, 4vw, 2.5rem);
