--- a/src/app/pages/galerija/galerija.component.css
+++ b/src/app/pages/galerija/galerija.component.css
@@ -4,14 +4,16 @@
   gap: 12px;
   padding: clamp(1rem, 3vh, 4rem) clamp(1rem, 5vw, 4rem);
 }
- .gallery-header {
-  display: flex;
-  align-items: center;
+
+
+.gallery-header {
+  padding: clamp(1rem, 3vh, 4rem) clamp(1rem, 5vw, 4rem) 0;
   font-size: 1.6rem;
   font-weight: bold;
   color: #b39adc;
-  margin: clamp(3vh, 4vw, 6vh) 5vh 0.2vh;
- }
+}
+
+
 
 .item {
   position: relative;
@@ -93,4 +95,10 @@
   font-size: 2rem;
   color: white;
   cursor: pointer;
+}
+
+@media (min-width: 550px) {
+  .gallery-header {
+    padding-top: 7vh;
+  }
 }
