--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,6 +13,7 @@
       <li><a routerLink="/galerija" (click)="closeMenu()">GALERIJA</a></li>
       <li><a routerLink="/onama" (click)="closeMenu()">O NAMA</a></li>
       <li><a routerLink="/kontakt" (click)="closeMenu()">KONTAKT</a></li>
+      <li><a routerLink="/auth" (click)="closeMenu()">PRIJAVI SE</a></li>
     </ul>
 
 
