--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,17 +6,41 @@
       </a>
     </div>
 
-
     <ul class="nav-links" [class.active]="menuOpen">
       <li><a routerLink="/" (click)="closeMenu()">POČETNA</a></li>
       <li><a routerLink="/dogadaji" (click)="closeMenu()">DOGAĐAJI</a></li>
       <li><a routerLink="/galerija" (click)="closeMenu()">GALERIJA</a></li>
       <li><a routerLink="/onama" (click)="closeMenu()">O NAMA</a></li>
       <li><a routerLink="/kontakt" (click)="closeMenu()">KONTAKT</a></li>
-      <li><a routerLink="/auth" (click)="closeMenu()">PRIJAVI SE</a></li>
+
+      <!-- Ako je korisnik prijavljen -->
+      <li class="profile-wrapper" *ngIf="user$ | async as user">
+        <div class="profile-trigger" (click)="toggleDropdown()" tabindex="0">
+          <i class="fas fa-user"></i>
+          <span class="user-name desktop-only">{{ user.fullName || user.email }}</span>
+        </div>
+
+        <!-- Samo za mobilni meni -->
+        <div class="mobile-only">
+          <a [routerLink]="['/profil']" (click)="closeMenu()">MOJ PROFIL</a>
+        </div>
+
+        <!-- Dropdown meni -->
+        <ul class="dropdown-menu" *ngIf="dropdownOpen && !menuOpen">
+          <li>
+            <a [routerLink]="['/profil']" (click)="closeDropdown()">Moj profil</a>
+          </li>
+          <li>
+            <a (click)="logout()">Odjava</a>
+          </li>
+        </ul>
+      </li>
+
+      <!-- Ako nije prijavljen -->
+      <li *ngIf="!(user$ | async)">
+        <a routerLink="/auth" (click)="closeMenu()">PRIJAVI SE</a>
+      </li>
     </ul>
-
-
 
     <div class="hamburger" (click)="toggleMenu()">
       <span *ngIf="!menuOpen">&#9776;</span>
